k8s/wilsonbe-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wilsonbe-service
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: wilsonbe
